# akzio-signal-intelligence

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  todo.md
.codex/: config.toml
config/: config.yaml
crates/orchestrator-cli/: Cargo.toml
crates/orchestrator-cli/src/: cli_config.rs  exec.rs  jin10.rs  lib.rs  memory_promote.rs  reflection_score.rs  report.rs  social.rs  sql_cli.rs  technical.rs  wayinvideo.rs  weekly_distill.rs  youtube.rs
crates/orchestrator-cli/src/eval/: baseline.rs  mod.rs  runner.rs  scoring.rs
crates/orchestrator-cli/tests/: mock_exec.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: artifact.rs  cache.rs  config.rs  jin10_csv.rs  lib.rs  paths.rs  plugin_manifest.rs  prompt.rs  prompt_plugins.rs  reflection.rs  role_registry.rs  technical_csv.rs  ticker.rs  token.rs
crates/orchestrator-core/tests/: public_behavior.rs
crates/orchestrator-domain/: Cargo.toml
crates/orchestrator-domain/src/: artifact.rs  degraded.rs  error.rs  lib.rs  phase.rs  role.rs
crates/orchestrator-eval/: Cargo.toml
crates/orchestrator-eval/src/: baseline.rs  lib.rs  runner.rs  scoring.rs
crates/orchestrator-ingest/: Cargo.toml
crates/orchestrator-ingest/src/: config.rs  jin10.rs  lib.rs  social.rs  technical.rs  wayinvideo.rs  youtube.rs
crates/orchestrator-llm/: Cargo.toml
crates/orchestrator-llm/src/: agent_loop.rs  lib.rs  llm_judge.rs  tools.rs  truncation.rs  web_search.rs
crates/orchestrator-llm/src/agent_loop/: debug_capture.rs  mod.rs  streaming.rs  types.rs
crates/orchestrator-llm/src/tools/: ai4trade.rs  alpaca.rs  fetch_jin10_flash.rs  fetch_last30days_context.rs  fetch_wayinvideo_transcript.rs  fetch_youtube_transcript.rs  mod.rs  read_experience.rs  read_jin10_candidates.rs  read_jin10_csv.rs  read_phase_summaries.rs  read_phase_summary_details.rs  read_reflection_source.rs  read_run_context.rs  read_technical_csv.rs  read_technical_detail.rs  read_technical_snapshot.rs  run_technical_indicators.rs  think.rs  verify_event.rs  web_run.rs
crates/orchestrator-report/: Cargo.toml
crates/orchestrator-report/src/: builder.rs  lib.rs  report.rs
crates/orchestrator-sql/: Cargo.toml
crates/orchestrator-sql/src/: ai4trade.rs  alpaca.rs  archive.rs  candidate.rs  context.rs  importers.rs  lib.rs  maintenance.rs  memory.rs  metrics.rs  outcome.rs  phase00_gate.rs  phase_index.rs  phase_summary_gate.rs  prediction.rs  reflection.rs  schema.rs  system_metrics.rs  technical_store.rs  write.rs
crates/orchestrator-sql/tests/: maintenance_behavior.rs  migration_behavior.rs  sql_behavior.rs  transaction_behavior.rs
crates/orchestrator-workflow/: Cargo.toml
crates/orchestrator-workflow/src/: exec.rs  lib.rs
crates/orchestrator-workflow/src/exec/: args.rs  mod.rs
crates/orchestrator-workflow/src/orchestration/: allocation.rs  artifact.rs  compress.rs  config.rs  conflict_detection.rs  contract.rs  degraded.rs  lifecycle.rs  market_truth.rs  memory.rs  mod.rs  plugin_loader.rs  policy.rs  preflight.rs  render.rs  retrieval.rs  role_jobs.rs  state.rs  trade_intent.rs
crates/orchestrator-workflow/src/report/: builder.rs  commands.rs  config.rs  mod.rs
data/: data.db
prompts/_archive/: README.md
prompts/allocation/: manager.md
prompts/analysts/: news_macro.md  reddit.md  technical.md  x.md  youtube.md
prompts/common/: analysis_trace.md  analyst_output_contract.md  analyst_output_structure.md  anti_injection.md  experience.md  leveraged_etf_rules.md  research_calibration.md  research_dedup.md  research_drivers.md  researcher_interaction.md  researcher_seed.md  retrieval_policy.md  risk_analyst.md  ticker.md
prompts/common/components/analytical_trace/: component.md  manifest.toml
prompts/common/components/anti_injection/: manifest.toml
prompts/common/components/execution_trace/: component.md  manifest.toml
prompts/common/components/experience/: component.md  manifest.toml
prompts/common/components/summary_trace/: component.md  manifest.toml
prompts/common/components/ticker/: manifest.toml
prompts/components/ticker/: component.md
prompts/managers/: portfolio_manager.md  research_manager.md
prompts/mediators/: topic_controller.md  topic_generation.md
prompts/messages/: artifact_retry.md  finalize.md  request_wrapper.md
prompts/messages/compressors/: source_payload.md
prompts/messages/phase2/: cross_examination.md  phase3_probability_retry.md  point_debate.md
prompts/meta/: memory_reflector.md
prompts/phase0/: historical_reflection.md  phase00.md
prompts/phase1/: news_macro.md  technical.md
prompts/phase2/: bear.md  bull.md  topic_controller.md  topic_generator.md
prompts/phase2/messages/: topic_fork_user.md
prompts/phase2/researcher/: debate.md  seed.md  side_bear.md  side_bull.md  warmup.md
prompts/phase25/: bear.md  bull.md
prompts/phase25/messages/: seed_packaging.md  topic_fork_requirement.md  topic_fork_user.md  warmup.md
prompts/phase3/: research_manager.md
prompts/phase4/: trader.md
prompts/phase5/: aggressive.md  conservative.md  neutral.md  risk_analyst.md
prompts/phase6/: portfolio_manager.md
prompts/phase_summary/: phase_summary.md
prompts/reducers/: debate_final.md  evidence.md
prompts/researchers/: bear.md  bear_initial.md  bear_initial_monitor.md  bear_interaction.md  bull.md  bull_initial.md  bull_initial_monitor.md  bull_interaction.md  debate.md
prompts/risk/: aggressive.md  conservative.md  neutral.md
prompts/roles/analyst.technical/: manifest.toml  role.md
prompts/system/: agent_loop.md  judge.md
prompts/system/messages/: artifact_retry.md
prompts/traders/: trader.md
