[package]
name = "orchestrator-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
regex.workspace = true
rusqlite.workspace = true
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-llm = { path = "../orchestrator-llm" }
orchestrator-sql = { path = "../orchestrator-sql" }
orchestrator-ingest = { path = "../orchestrator-ingest" }
orchestrator-workflow = { path = "../orchestrator-workflow" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
html-escape.workspace = true
rusqlite.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true

[[bin]]
name = "orchestrator-exec"
path = "src/bin/orchestrator_exec.rs"

[[bin]]
name = "orchestrator-sql"
path = "src/bin/orchestrator_sql.rs"

[[bin]]
name = "report-email"
path = "src/bin/report_email.rs"

[[bin]]
name = "orchestrator-ingest"
path = "src/bin/orchestrator_ingest.rs"

[[bin]]
name = "orchestrator-ops"
path = "src/bin/orchestrator_ops.rs"

[[bin]]
name = "orchestrator-eval"
path = "src/bin/orchestrator_eval.rs"

[[bin]]
name = "orchestrator-prompt-lint"
path = "src/bin/orchestrator_prompt_lint.rs"

[[bin]]
name = "orchestrator-metrics"
path = "src/bin/orchestrator_metrics.rs"
