[package]
name = "orchestrator-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-llm = { path = "../orchestrator-llm" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
