[package]
name = "orchestrator-ingest"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
orchestrator-core = { path = "../orchestrator-core" }

[dev-dependencies]
tempfile.workspace = true
