[package]
name = "orchestrator-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-ingest = { path = "../orchestrator-ingest" }
orchestrator-sql = { path = "../orchestrator-sql" }
futures.workspace = true
async-openai.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
