[package]
name = "orchestrator-report"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
html-escape = { workspace = true }
pulldown-cmark = "0.12"
serde_json = { workspace = true }
orchestrator-core = { path = "../orchestrator-core" }

[dev-dependencies]
tempfile = { workspace = true }
