[package]
name = "orchestrator-sql"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
orchestrator-core = { path = "../orchestrator-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
md-5.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

