[package]
name = "orchestrator-workflow"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-sql = { path = "../orchestrator-sql" }
orchestrator-llm = { path = "../orchestrator-llm" }
orchestrator-ingest = { path = "../orchestrator-ingest" }

[dev-dependencies]
tempfile = { workspace = true }
